# simple-agent

./: Cargo.toml  README.md  rs_dev_guidelines.md
examples/: basic_agent.rs  custom_tools.rs  mcp_client.rs
specs/: 0002-simple-agent-design-rust.md  instructions.md
src/: error.rs  lib.rs
src/agent/: agent_loop.rs  loop_.rs  mod.rs
src/llm/: client.rs  mod.rs  openai.rs
src/mcp/: adapter.rs  client.rs  mod.rs
src/permission/: manager.rs  mod.rs
src/session/: message.rs  session.rs
src/tool/: executor.rs  mod.rs  registry.rs
