[package]
name = "simple-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# JSON Schema
schemars = "0.8"

# MCP protocol
tokio-util = { version = "0.7", features = ["codec"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Regex for permission matching
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "simple-agent"

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "custom_tools"
path = "examples/custom_tools.rs"

[[example]]
name = "mcp_client"
path = "examples/mcp_client.rs"
